--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
-        <button onclick="" class="button">Suma</button>
+        <button onclick="consoleFunction()" class="button">Console</button>
+        <button onclick="loveJSFunction()" class="button">Alert</button>
+        <button onclick="promptFunction()" class="button">Prompt</button>
+        <button onclick="sumFunction()" class="button">Suma</button>
     </main>
 
-      <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
